--- a/Informe.html
+++ b/Informe.html
@@ -42,6 +42,11 @@
       border-radius: 5px;
       margin: 10px 0;
     }
+    img {
+      max-width: 100%; /* Ajusta el tamaño de las imágenes para que no sobrepasen el contenedor */
+      border-radius: 8px;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -82,6 +87,17 @@
     <p>
       Este objeto contiene 63 filas (pacientes) y 63 columnas (metabolitos), permitiendo analizar la relación entre la pérdida muscular y las concentraciones de metabolitos.
     </p>
+
+    <h3>Gráficos</h3>
+    <h4>Heatmap de Correlaciones</h4>
+    <img src="https://github.com/Dianaguma/Gutierrez_Martinez_Diana_PEC1/blob/main/heatmap.png" alt="Heatmap de Correlaciones">
+    
+    <h4>Varianza Explicada</h4>
+    <img src="https://github.com/Dianaguma/Gutierrez_Martinez_Diana_PEC1/blob/main/varianza_explicada.png" alt="Varianza Explicada">
+
+    <h4>Gráfico de Correlación</h4>
+    <img src="https://github.com/Dianaguma/Gutierrez_Martinez_Diana_PEC1/blob/main/grafico_correlacion.png" alt="Gráfico de Correlación">
+
     <h3>Análisis Exploratorio</h3>
     <p>
       El análisis de las concentraciones de metabolitos muestra que algunos, como la creatinina, están elevados en pacientes con cachexia. Esto puede ser un indicador importante de la descomposición muscular, característica de esta condición. También se observaron correlaciones significativas entre ciertos metabolitos, como succinato y oxoglutarato, involucrados en el ciclo de Krebs y el metabolismo energético.
